[metadata]
author = Christian Holler
author_email = choller@mozilla.com
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3
    Topic :: Security
    Topic :: Software Development :: Testing
description = Runner for multiple parallel guided fuzzer instances of Firefox.
keywords = firefox fuzz fuzzing test testing
license = MPL 2.0
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Mozilla Fuzzing Team
maintainer_email = fuzzing@mozilla.com
name = guided-fuzzing-daemon
url = https://github.com/MozillaSecurity/guided-fuzzing-daemon

[options]
package_dir =
    = src
include_package_data = True
install_requires =
    FuzzManager>=0.6.0
    boto
    fasteners
    psutil
packages =
    guided_fuzzing_daemon
python_requires = >=3.8
zip_safe = False

[options.entry_points]
console_scripts =
    guided-fuzzing-daemon = guided_fuzzing_daemon.main:main

[options.extras_require]
dev =
    pre-commit
    tox

[codespell]
ignore-regex = \\[fnrstv]
